# sparkleNN

./: .gitignore  README.md  pyproject.toml
src/sparklenn/: Layer.py  MLP.py  Neuron.py  Value.py  __init__.py
