[project]
name = "sparklenn"
version = "0.1.0"
description = ""
authors = [
    {name = "pandelis-giankulidis",email = "pantelis.giankoulidis+1@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]
packages = [{include = "sparklenn", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
